fix(_overrides): fix extra space caused by RTL on topics page

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/_overrides.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/_overrides.scss
@@ -160,10 +160,15 @@ h6 {
 
     #header {
         max-width: 1260px;
-        overflow-y: hidden;
     }
 }
 
 .grid-container {
     max-width: 1260px
+}
+
+html[dir="rtl"] {
+    #header {
+        overflow-y: hidden;
+    }
 }
